fix: publish openkit binary

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "type": "module",
   "name": "@paulojalowyj/openkit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "OpenKit - OpenCode Agent System - 15 specialized prompts, 33+ skills, validation scripts\n\nQuick Start:\n1. Install: npx @paulojalowyj/openkit init\n2. Start OpenCode: opencode\n3. Use workflows: /engineer, /plan, /impl, /test\n\nDocumentation: https://opencode.ai/docs",
   "main": "index.js",
   "bin": {
-    "openkit": "./bin/cli.js"
+    "openkit": "bin/cli.js"
   },
   "scripts": {
     "init": "node bin/cli.js init",
