feat: add openkit upgrade with manifest
Adds init-time manifest baseline and a safe upgrade command with CI defaults, backups, and node:test coverage.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "init": "node bin/cli.js init",
     "doctor": "node bin/cli.js doctor",
-    "test": "echo \"No tests yet - implement integration tests\"",
+    "test": "node --test test/*.test.js",
     "prepublishOnly": "node scripts/prepare.js",
     "version": "node scripts/update-version.js && git add -A"
   },
