feat: add installation prevention mechanisms (v0.2.1)
Add three-layer system to prevent incorrect OpenKit installation and
guide users to correct npx workflow.

Components:
- bin/postinstall-check.js: Detects and warns when installed as dependency
- index.js: Blocks require/import with helpful error message
- package.json: Updated metadata (description, keywords, postinstall)
- bin/cli.js: Enhanced success message emphasizing 'opencode' command

Documentation:
- docs/adr/ADR_0001_PREVENT_INCORRECT_INSTALLATION.md: Architecture decision
- docs/INSTALLATION_PREVENTION.md: Technical implementation details
- CHANGELOG.md: Added v0.2.1 release notes
- README.md: Added installation warning and opencode command
- README.pt-BR.md: Added installation warning (Portuguese)
- docs/README.md: Added ADR index and installation prevention link

Changes:
- All messages now in English (no emojis)
- Postinstall uses native Node.js modules (no external deps)
- Detection via INIT_CWD environment variable
- Educational approach (warns but doesn't block installation)

Testing:
- Verified postinstall warning on npm install
- Verified import/require blocking
- Verified enhanced success message on npx init

Version: 0.2.0 -> 0.2.1

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "type": "module",
   "name": "@paulojalowyj/openkit",
-  "version": "0.2.0",
-  "description": "OpenKit - OpenCode Agent System - 15 specialized prompts, 33+ skills, validation scripts\n\nQuick Start:\n1. Install: npx @paulojalowyj/openkit init\n2. Start OpenCode: opencode\n3. Use workflows: /engineer, /plan, /impl, /test\n\nDocumentation: https://opencode.ai/docs",
+  "version": "0.2.1",
+  "description": "Use 'npx @paulojalowyj/openkit init' (not npm install). OpenKit is a CLI tool for OpenCode Agent System - 15 specialized agents, 33+ skills, validation scripts.\n\nQuick Start:\n1. Install: npx @paulojalowyj/openkit init\n2. Start OpenCode: opencode\n3. Use workflows: /engineer, /plan, /impl, /test\n\nDocumentation: https://opencode.ai/docs",
   "main": "index.js",
   "bin": {
     "openkit": "bin/cli.js"
   },
   "scripts": {
+    "postinstall": "node bin/postinstall-check.js",
     "init": "node bin/cli.js init",
     "doctor": "node bin/cli.js doctor",
     "test": "node --test test/*.test.js",
@@ -16,6 +17,7 @@
   },
   "files": [
     "bin",
+    "index.js",
     ".opencode",
     "opencode.json",
     "blueprints",
@@ -26,6 +28,9 @@
     "README.pt-BR.md"
   ],
   "keywords": [
+    "cli-tool",
+    "npx-only",
+    "no-install-needed",
     "ai",
     "agents",
     "opencode",
